# GameofLife

./: CMakeLists.txt  README.md  game.c  main.c
gameV1/: CMakeLists.txt  file.c  game.c  game.h  main.c
test/: CMakeLists.txt  main.c
test/gameV1/: file.c  main.c
v8/: main.c
